k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chattr-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: chattr-backend

  template:
    metadata:
      labels:
        app: chattr-backend

    spec:
      containers:
        - name: chattr-backend
          image: chattr-backend:k8s
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

          
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

         
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
