k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: chattr-backend-service

spec:
  selector:
    app: chattr-backend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
